--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "next-contentlayer": "^0.3.0",
+    "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   }
